@@ -1,4 +1,2 @@
 ## Process this file with automake to create Makefile.in
-AUTOMAKE_OPTIONS=no-dependencies
-
 EXTRA_DIST = regex.h
