@@ -14,6 +14,4 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-AUTOMAKE_OPTIONS = no-dependencies
-
 EXTRA_DIST = README make.com config_vms.h
